# libunikey

./: CMakeLists.txt  README.md
src/: byteio.cpp  byteio.h  charset.cpp  charset.h  convert.cpp  importexport.h  inputproc.cpp  inputproc.h  keycons.h  mactab.cpp  mactab.h  pattern.h  readme.txt  seq_utils.cpp  seq_utils.h  ukengine.cpp  ukengine.h  unikey.cpp  usrkeymap.cpp  vnconv.h  vnlexi.h  wordtrie.cpp  wordtrie.h
