CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0 FATAL_ERROR)

PROJECT(libunikey LANGUAGES CXX)

SET LIBUNIKEY_SRC CMAKE_CURRENT_SOURCE_DIR/src

FILE(GLOB LIBUNIKEY_SRC
  "*.cpp"
)

ADD_LIBRARY(libunikey STATIC ${LIBUNIKEY_SRC})

TARGET_COMPILE_OPTIONS(libunikey
  PUBLIC -funsigned-char)

SET_TARGET_PROPERTIES(libunikey PROPERTIES OUTPUT_NAME "unikey")
