CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0 FATAL_ERROR)

PROJECT(libunikey LANGUAGES CXX)

SET(LIBUNIKEY_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)

FILE(GLOB LIBUNIKEY_SRC
  "${LIBUNIKEY_SRC_DIR}/*.cpp"
)

ADD_LIBRARY(libunikey STATIC ${LIBUNIKEY_SRC})

TARGET_COMPILE_OPTIONS(libunikey
  PUBLIC -funsigned-char)

TARGET_INCLUDE_DIRECTORIES(libunikey INTERFACE ${LIBUNIKEY_SRC_DIR})

SET_TARGET_PROPERTIES(libunikey PROPERTIES OUTPUT_NAME "unikey")
